# nez

./: .gitignore  CLAUDE.md  README.md  batch.sh  flake.nix  main.py  pyproject.toml  settings.txt  slurm-169469.err  slurm-169469.out  slurm-169479.err  slurm-169479.out  slurm-169480.err  slurm-169480.out
data/checkpoints/rlgym-ppo-run-1775439023789428214/0/: BOOK_KEEPING_VARS.json  PPO_POLICY.pt  PPO_POLICY_OPTIMIZER.pt
data/checkpoints/rlgym-ppo-run-1775439262223211926/0/: PPO_VALUE_NET.pt  PPO_VALUE_NET_OPTIMIZER.pt
data/checkpoints/rlgym-ppo-run-1775439822675043467/83946156/: BOOK_KEEPING_VARS.json  PPO_POLICY.pt  PPO_POLICY_OPTIMIZER.pt  PPO_VALUE_NET.pt  PPO_VALUE_NET_OPTIMIZER.pt
data/checkpoints/rlgym-ppo-run-1775439822675043467/84046206/: BOOK_KEEPING_VARS.json  PPO_POLICY.pt  PPO_POLICY_OPTIMIZER.pt  PPO_VALUE_NET.pt  PPO_VALUE_NET_OPTIMIZER.pt
data/checkpoints/rlgym-ppo-run-1775439822675043467/84146268/: BOOK_KEEPING_VARS.json  PPO_POLICY.pt  PPO_POLICY_OPTIMIZER.pt  PPO_VALUE_NET.pt  PPO_VALUE_NET_OPTIMIZER.pt
data/checkpoints/rlgym-ppo-run-1775439822675043467/84246334/: BOOK_KEEPING_VARS.json  PPO_POLICY.pt  PPO_POLICY_OPTIMIZER.pt  PPO_VALUE_NET.pt  PPO_VALUE_NET_OPTIMIZER.pt
data/checkpoints/rlgym-ppo-run-1775439822675043467/84346370/: BOOK_KEEPING_VARS.json  PPO_POLICY.pt  PPO_POLICY_OPTIMIZER.pt  PPO_VALUE_NET.pt  PPO_VALUE_NET_OPTIMIZER.pt
data/checkpoints/rlgym-ppo-run-1775448406010550218/607128508/: BOOK_KEEPING_VARS.json  PPO_POLICY.pt  PPO_POLICY_OPTIMIZER.pt  PPO_VALUE_NET.pt  (+1 more)
src/: example.py  main.py  ssl_bot.py
(+20 files in other folders)
